# rust-template

./: Cargo.toml  README.md
.github/workflows/: build_workflow.yml  code_coverage.yml  security_audit.yml  semver.yml  sign_binary.yml
logs/: this is where logs are
src/: main.rs
src/errors/: custom_errors.rs
