[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
github = "lowpolycat1"
authors = ["your name <email@email_client>"]
description = "A Rust template project"
license_file = "./license.txt"
repository = "https://github.com/yourusername/rust-template"
twitter_handle = ""
linkedin_username = ""

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
reqwest = "0.12.12"
