[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
authors = ["your name <email@email_client>"]
description = "A Rust template project"
license = "MIT"
repository = "https://github.com/yourusername/rust-template"

[dependencies]
tracing = "*"
tracing-subscriber = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
thiserror = { version = "*" }

[build-dependencies]


[dev-dependencies]


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"
rpath = false
